--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,18 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- Spring-Mybatis    和spring-boot-starter 重复-->
+		 <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+        <!-- oralce -->
+      <dependency>
+			  <groupId>com.oracle</groupId>
+			  <artifactId>ojdbc6</artifactId>
+			  <version>11.2.0.1.0</version>
+		</dependency>
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>  
 			<artifactId>spring-boot-starter-web</artifactId>  
@@ -66,6 +78,12 @@
 		    <artifactId>fastjson</artifactId>
 		    <version>1.2.41</version>
 		</dependency>
+		 <!-- alibaba的druid数据库连接池 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+             <version>1.1.6</version>
+        </dependency>
 	   <!-- aop  -->
 	   <dependency>
 	    <groupId>org.springframework.boot</groupId>
@@ -119,6 +137,11 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+	    <dependency>
+	    	<groupId>org.springframework.boot</groupId>
+	    	<artifactId>spring-boot-configuration-processor</artifactId>
+	    	<optional>true</optional>
+	    </dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -130,6 +153,17 @@
 	                <fork>true</fork>
                 </configuration>
 			</plugin>
+			 <!-- mybatis generator 自动生成代码插件  找到该pom文件位置 执行 mvn mybatis-generator:generate  -->
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.2</version>
+                <configuration>
+                    <configurationFile>src/main/resources/mybatis/generatorConfig.xml</configurationFile>
+                    <overwrite>true</overwrite> <!-- 是否覆盖 -->  
+                    <verbose>true</verbose> <!--允许移动生成的文件 -->  
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
