--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.profiles.active=dev
 #spring.freemarker.suffix=.ftl
 #
 spring.mvc.static-path-pattern=/**
-spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/ ,swagger-ui.html
+spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/ ,swagger-ui.html,druid/index.html
 
 spring.thymeleaf.cache=true
 spring.thymeleaf.prefix=classpath:/templates/
@@ -29,7 +29,48 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
-ds.userName=root
-ds.password=tiger
-ds.url=jdbc:mysql://localhost:3306/test
-ds.driverClassName=com.mysql.jdbc.Driver
+#数据库访问配置
+#mysql
+#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/blog
+#oracle
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@192.168.10.217:1521:resource
+spring.datasource.username=hyj
+spring.datasource.password=hyj
+
+##mybaits
+##指向mapper的xml文件位置
+mybatis.mapper-locations=classpath:mybatis/mapper/*Mapper.xml
+mybatis.config-location: classpath:mybatis/Config.xml
+mybatis.type-aliases-package=com.example.demo.mapper
+
+##druid 数据源配置
+spring.datasource.druid.driverClassName=oracle.jdbc.driver.OracleDriver
+spring.datasource.druid.url=jdbc:oracle:thin:@192.168.10.217:1521:resource
+spring.datasource.druid.username=hyj
+spring.datasource.druid.password=hyj
+spring.datasource.druid.initialSize=5
+spring.datasource.druid.minIdle=5
+spring.datasource.druid.maxActive=20
+spring.datasource.druid.maxWait=60000
+spring.datasource.druid.timeBetweenEvictionRunsMillis=60000
+spring.datasource.druid.min-evictableIdleTimeMillis=300000
+spring.datasource.druid.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.druid.testWhileIdle=true
+spring.datasource.druid.testOnBorrow=false
+spring.datasource.druid.testOnReturn=false
+spring.datasource.druid.poolPreparedStatements=true
+spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
+spring.datasource.druid.filters=stat,wall
+
+## druid 监控
+spring.datasource.druid.web-stat-filter.enabled=true
+spring.datasource.druid.web-stat-filter.url-pattern=/*
+spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*
+## druid 监控页面
+spring.datasource.druid.stat-view-servlet.enabled=true
+spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
+spring.datasource.druid.stat-view-servlet.login-username=druid
+spring.datasource.druid.stat-view-servlet.login-password=druid123
