--- a/pom.xml
+++ b/pom.xml
@@ -41,12 +41,18 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.0</version>
         </dependency>
-        <!-- oralce -->
+        <!-- oralce  因为oracle版权问题 maven无法自动下载oracle的jar  需要手动配置本地库   2018-4-13 14:21:03 wdm-->
       <dependency>
 			  <groupId>com.oracle</groupId>
 			  <artifactId>ojdbc6</artifactId>
 			  <version>11.2.0.1.0</version>
 		</dependency>
+		<!-- 分页插件  2018-4-14 09:01:37 wdm -->
+		<dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>4.1.3</version>
+        </dependency>
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>  
 			<artifactId>spring-boot-starter-web</artifactId>  
