--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,8 @@ spring.profiles.active=dev
 spring.mvc.static-path-pattern=/**
 spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/ ,swagger-ui.html,druid/index.html
 
-spring.thymeleaf.cache=true
+#thymeleaf 模板配置   cache  缓存开发时该禁止
+spring.thymeleaf.cache=false 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
@@ -74,3 +75,8 @@ spring.datasource.druid.stat-view-servlet.enabled=true
 spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
 spring.datasource.druid.stat-view-servlet.login-username=druid
 spring.datasource.druid.stat-view-servlet.login-password=druid123
+
+
+##自定义
+com.app.author=Wangdm
+com.app.time=2018/04/18 16:12:16
