--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,7 +43,8 @@ spring.datasource.password=hyj
 
 ##mybaits
 ##指向mapper的xml文件位置
-mybatis.mapper-locations=classpath:mybatis/mapper/*Mapper.xml
+#mybatis.mapper-locations=classpath:mybatis/mapper/*Mapper.xml
+mybatis.mapper-locations=classpath:com/example/demo/mapper/*Mapper.xml
 mybatis.config-location: classpath:mybatis/Config.xml
 mybatis.type-aliases-package=com.example.demo.mapper
 
