--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<groupId>com.example</groupId>
 	<artifactId>demo-2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -57,22 +55,22 @@
 		    <groupId>org.springframework.boot</groupId>  
 			<artifactId>spring-boot-starter-web</artifactId>  
 			<!-- 移除嵌入式tomcat jar -->
-<!-- 			<exclusions>   -->
-<!--                 <exclusion>   -->
-<!--                     <groupId>org.springframework.boot</groupId>   -->
-<!--                     <artifactId>spring-boot-starter-tomcat</artifactId>   -->
-<!--                 </exclusion>   -->
+			<exclusions>  
+                <exclusion>  
+                    <groupId>org.springframework.boot</groupId>  
+                    <artifactId>spring-boot-starter-tomcat</artifactId>  
+                </exclusion>  
 <!--                 <exclusion> -->
 <!-- 	                    <groupId>ch.qos.logback</groupId> -->
 <!-- 		                <artifactId>logback-classic</artifactId> -->
 <!-- 	             </exclusion> -->
-<!--             </exclusions>  -->
+            </exclusions> 
 		</dependency>
-		<!-- 打包时不再使用嵌入式tomcat jar -->
+		<!-- 移除嵌入式tomcat之后会报错，加入下面的依赖 -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <scope>provided</scope>
 		</dependency>
 		<!-- freemarker  前端模板文件1 -->
 <!-- 		<dependency> -->
@@ -88,8 +86,14 @@
 		<dependency>  
 		       <groupId>net.sourceforge.nekohtml</groupId>  
 		       <artifactId>nekohtml</artifactId>  
-		       <version>1.9.22</version>  
+<!-- 		       <version>1.9.22</version>   -->
 		</dependency> 
+		<!-- Apache Shiro -->
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-spring</artifactId>
+			<version>1.4.0</version>
+		</dependency>
 		<!-- fastjson  -->
 		<dependency>
 		    <groupId>com.alibaba</groupId>
@@ -159,7 +163,7 @@
 	    <dependency>
 		    <groupId>org.webjars</groupId>
 		    <artifactId>webjars-locator</artifactId>
-		    <version>0.32</version>
+<!-- 		    <version>0.32</version> -->
 		</dependency>
 	    <dependency>  
 		    <groupId>org.webjars</groupId>  
@@ -180,6 +184,12 @@
 		    <groupId>org.webjars.npm</groupId>
 		    <artifactId>vue-router</artifactId>
 		    <version>2.7.0</version>
+		</dependency>
+				<!-- 打包时不再使用嵌入式tomcat jar -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	<build>
