--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
 			<artifactId>shiro-spring</artifactId>
 			<version>1.4.0</version>
 		</dependency>
+		<!-- 加入redis启动项 -->
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 		<!-- fastjson  -->
 		<dependency>
 		    <groupId>com.alibaba</groupId>
