springboot整合阿里druid数据库连接池的代码调整

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,6 +40,61 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@192.168.10.217:1521:resource
 spring.datasource.username=hyj
 spring.datasource.password=hyj
+###################以下为druid增加的配置###########################
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+# 下面为连接池的补充设置，应用到上面所有数据源中
+# 初始化大小，最小，最大
+spring.datasource.initialSize=5
+spring.datasource.minIdle=5
+spring.datasource.maxActive=20
+# 配置获取连接等待超时的时间
+spring.datasource.maxWait=60000
+# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+# 配置一个连接在池中最小生存的时间，单位是毫秒
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+# 打开PSCache，并且指定每个连接上PSCache的大小
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+# 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+spring.datasource.filters=stat,wall,log4j
+# 通过connectProperties属性来打开mergeSql功能；慢SQL记录
+spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+# 合并多个DruidDataSource的监控数据
+#spring.datasource.useGlobalDataSourceStat=true
+###############以上为配置druid添加的配置########################################
+##druid 数据源配置
+#spring.datasource.druid.driverClassName=oracle.jdbc.driver.OracleDriver
+#spring.datasource.druid.url=jdbc:oracle:thin:@192.168.10.217:1521:resource
+#spring.datasource.druid.username=hyj
+#spring.datasource.druid.password=hyj
+#spring.datasource.druid.initialSize=5
+#spring.datasource.druid.minIdle=5
+#spring.datasource.druid.maxActive=20
+#spring.datasource.druid.maxWait=60000
+#spring.datasource.druid.timeBetweenEvictionRunsMillis=60000
+#spring.datasource.druid.min-evictableIdleTimeMillis=300000
+#spring.datasource.druid.validationQuery=SELECT 1 FROM DUAL
+#spring.datasource.druid.testWhileIdle=true
+#spring.datasource.druid.testOnBorrow=false
+#spring.datasource.druid.testOnReturn=false
+#spring.datasource.druid.poolPreparedStatements=true
+#spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
+#spring.datasource.druid.filters=stat,wall
+#
+### druid 监控
+#spring.datasource.druid.web-stat-filter.enabled=true
+#spring.datasource.druid.web-stat-filter.url-pattern=/*
+#spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*
+### druid 监控页面
+#spring.datasource.druid.stat-view-servlet.enabled=true
+#spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
+#spring.datasource.druid.stat-view-servlet.login-username=druid
+#spring.datasource.druid.stat-view-servlet.login-password=druid123
 
 ##mybaits
 ##指向mapper的xml文件位置
@@ -47,35 +102,6 @@ spring.datasource.password=hyj
 mybatis.mapper-locations=classpath:com/example/demo/mapper/*Mapper.xml
 mybatis.config-location: classpath:mybatis/Config.xml
 mybatis.type-aliases-package=com.example.demo.mapper
-
-##druid 数据源配置
-spring.datasource.druid.driverClassName=oracle.jdbc.driver.OracleDriver
-spring.datasource.druid.url=jdbc:oracle:thin:@192.168.10.217:1521:resource
-spring.datasource.druid.username=hyj
-spring.datasource.druid.password=hyj
-spring.datasource.druid.initialSize=5
-spring.datasource.druid.minIdle=5
-spring.datasource.druid.maxActive=20
-spring.datasource.druid.maxWait=60000
-spring.datasource.druid.timeBetweenEvictionRunsMillis=60000
-spring.datasource.druid.min-evictableIdleTimeMillis=300000
-spring.datasource.druid.validationQuery=SELECT 1 FROM DUAL
-spring.datasource.druid.testWhileIdle=true
-spring.datasource.druid.testOnBorrow=false
-spring.datasource.druid.testOnReturn=false
-spring.datasource.druid.poolPreparedStatements=true
-spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
-spring.datasource.druid.filters=stat,wall
-
-## druid 监控
-spring.datasource.druid.web-stat-filter.enabled=true
-spring.datasource.druid.web-stat-filter.url-pattern=/*
-spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*
-## druid 监控页面
-spring.datasource.druid.stat-view-servlet.enabled=true
-spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
-spring.datasource.druid.stat-view-servlet.login-username=druid
-spring.datasource.druid.stat-view-servlet.login-password=druid123
 
 ##redis配置相关
 # Redis数据库索引（默认为0）
