springboot中banner和页面默认解析ico配置相关

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -123,6 +123,8 @@ spring.redis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=0
 
+#关闭springboot默认的Favicon  版本号1.5.10测试无效
+#spring.mvc.favicon.enabled=false
 
 ##自定义
 com.app.author=Wangdm
