--- a/pom.xml
+++ b/pom.xml
@@ -216,7 +216,7 @@
 <!-- 	                <jvmArguments>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005</jvmArguments> -->
                 </configuration>
                 <dependencies>
-                <!-- springloaded 热加载 -->
+                <!-- springloaded 热加载相关jar -->
 				<dependency>
 					<groupId>org.springframework</groupId>
 					<artifactId>springloaded</artifactId>
