--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,8 @@ spring.mail.properties.mail.smtp.starttls.required=true
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://localhost:3306/blog
 #oracle
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@192.168.10.217:1521:resource
 spring.datasource.username=hyj
 spring.datasource.password=hyj
