--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,12 @@
 	    	<artifactId>spring-boot-configuration-processor</artifactId>
 	    	<optional>true</optional>
 	    </dependency>
+	    <!-- gson -->
+	    <dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.5</version>
+		</dependency>
 	    <!-- web前端 jars -->
 	    <!-- 引入该jar 前台引入省略版本号 -->
 	    <dependency>
@@ -185,11 +191,11 @@
 		    <version>2.7.0</version>
 		</dependency>
 		<!-- 热启动  2018-3-15 11:15:59  wdm-->
-<!-- 		<dependency>   -->
-<!--             <groupId>org.springframework.boot</groupId>   -->
-<!--             <artifactId>spring-boot-devtools</artifactId>   -->
-<!--             <optional>true</optional>   -->
-<!--         </dependency>  -->
+		<dependency>  
+            <groupId>org.springframework.boot</groupId>  
+            <artifactId>spring-boot-devtools</artifactId>  
+            <optional>true</optional>  
+        </dependency> 
 		<!-- 打包时不再使用嵌入式tomcat jar -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -205,7 +211,7 @@
 				<configuration>
 	                <!-- 没有该配置，devtools 不生效     eclipse中是有效的啊  2018-3-15 13:44:43 wdm-->
 	                <!-- 当系统采用springloaded热加载时,该值设置为false 否则会开启两个java运行线程 -->
-<!-- 	                <fork>false</fork>  -->
+	                <fork>true</fork> 
 <!-- 	                -Xdebug是通知JVM工作在DEBUG模式下  -->
 <!-- 					-Xrunjdwp是通知JVM使用(java debug wire protocol)来运行调试环境。该参数同时了一系列的调试选项  -->
 <!-- 					transport指定了调试数据的传送方式,dt_socket是指用SOCKET模式  -->
@@ -217,11 +223,11 @@
                 </configuration>
                 <dependencies>
                 <!-- springloaded 热加载相关jar -->
-				<dependency>
-					<groupId>org.springframework</groupId>
-					<artifactId>springloaded</artifactId>
-					<version>1.2.6.RELEASE</version>
-				</dependency>
+<!-- 				<dependency> -->
+<!-- 					<groupId>org.springframework</groupId> -->
+<!-- 					<artifactId>springloaded</artifactId> -->
+<!-- 					<version>1.2.6.RELEASE</version> -->
+<!-- 				</dependency> -->
                 </dependencies>
 			</plugin>
 			 <!-- mybatis generator 自动生成代码插件  找到该pom文件位置 执行 mvn mybatis-generator:generate  -->
