--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		<!-- sb配置对activemq的支持 -->
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-activemq</artifactId>
+        </dependency>
 		<!-- 解决thymeleaf 对html要求严格问题  -->
 		<dependency>  
 		       <groupId>net.sourceforge.nekohtml</groupId>  
@@ -161,7 +166,7 @@
 	    <dependency>
 		    <groupId>com.google.code.gson</groupId>
 		    <artifactId>gson</artifactId>
-		    <version>2.8.5</version>
+		    <version>2.8.5</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 	    <!-- web前端 jars -->
 	    <!-- 引入该jar 前台引入省略版本号 -->
