--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -127,6 +127,13 @@ spring.redis.timeout=0
 #关闭springboot默认的Favicon  版本号1.5.10测试无效
 #spring.mvc.favicon.enabled=false
 
+####################mq########################
+#activemq
+spring.activemq.broker-url=tcp://localhost:61616
+#注意 对象传输需开启包白名单 否则会报错- -
+spring.activemq.packages.trust-all=true 
+####################mq########################
+
 ##自定义
 com.app.author=Wangdm
 com.app.time=2018/04/18 16:12:16
