--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,11 +24,14 @@ spring.thymeleaf.content-type=text/html
 
 # javamail 
 spring.mail.host=smtp.163.com
-spring.mail.username=xxx@163.com
-spring.mail.password=\u5BC6\u7801
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.username=weiniluoleiwdm@163.com
+spring.mail.password=wdm123
+spring.mail.default-encoding=UTF-8
+#发件人地址
+mail.fromMail.addr=weiniluoleiwdm@163.com
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
 
 #数据库访问配置
 #mysql
@@ -67,26 +70,11 @@ spring.datasource.filters=stat,wall,log4j
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 # 合并多个DruidDataSource的监控数据
 #spring.datasource.useGlobalDataSourceStat=true
+#该数据源别名
+spring.datasource.name= base-datasource 
+#指定初始化数据源，是否用data.sql来初始化，默认: true
+spring.datasource.initialize= true 
 ###############以上为配置druid添加的配置########################################
-##druid 数据源配置
-#spring.datasource.druid.driverClassName=oracle.jdbc.driver.OracleDriver
-#spring.datasource.druid.url=jdbc:oracle:thin:@192.168.10.217:1521:resource
-#spring.datasource.druid.username=hyj
-#spring.datasource.druid.password=hyj
-#spring.datasource.druid.initialSize=5
-#spring.datasource.druid.minIdle=5
-#spring.datasource.druid.maxActive=20
-#spring.datasource.druid.maxWait=60000
-#spring.datasource.druid.timeBetweenEvictionRunsMillis=60000
-#spring.datasource.druid.min-evictableIdleTimeMillis=300000
-#spring.datasource.druid.validationQuery=SELECT 1 FROM DUAL
-#spring.datasource.druid.testWhileIdle=true
-#spring.datasource.druid.testOnBorrow=false
-#spring.datasource.druid.testOnReturn=false
-#spring.datasource.druid.poolPreparedStatements=true
-#spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
-#spring.datasource.druid.filters=stat,wall
-#
 ### druid 监控
 #spring.datasource.druid.web-stat-filter.enabled=true
 #spring.datasource.druid.web-stat-filter.url-pattern=/*
@@ -98,17 +86,16 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 #spring.datasource.druid.stat-view-servlet.login-password=druid123
 
 ##mybaits
-##指向mapper的xml文件位置
-#mybatis.mapper-locations=classpath:mybatis/mapper/*Mapper.xml
-mybatis.mapper-locations=classpath:com/example/demo/mapper/*Mapper.xml
-mybatis.config-location: classpath:mybatis/Config.xml
-mybatis.type-aliases-package=com.example.demo.mapper
+##指向mapper的xml文件位置 当配置多数据源时因为所有路径都重写 该出可省略
+#mybatis.mapper-locations=classpath:com/example/demo/mapper/*Mapper.xml
+#mybatis.config-location: classpath:mybatis/Config.xml
+#mybatis.type-aliases-package=com.example.demo.mapper.dao
 
 ##redis配置相关
 # Redis数据库索引（默认为0）
 spring.redis.database=0
 # Redis服务器地址
-spring.redis.host=192.168.10.232
+spring.redis.host=127.0.0.1
 # Redis服务器连接端口
 spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
@@ -137,3 +124,28 @@ spring.activemq.packages.trust-all=true
 ##自定义
 com.app.author=Wangdm
 com.app.time=2018/04/18 16:12:16
+
+#多数据源配置相关  Multiple data source
+mds.second.datasource.url=jdbc:mysql://192.168.10.217:3306/tale?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+mds.second.datasource.username=root
+mds.second.datasource.password=root
+mds.second.datasource.driver-class-name=com.mysql.jdbc.Driver
+mds.second.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#指定初始化数据源，是否用data.sql来初始化，默认: true
+mds.second.datasource.initialize= true 
+mds.second.datasource.name= second-datasource 
+mds.second.datasource.initialSize=5
+mds.second.datasource.minIdle=5
+mds.second.datasource.maxActive=20
+mds.second.datasource.maxWait=60000
+mds.second.datasource.timeBetweenEvictionRunsMillis=60000
+mds.second.datasource.minEvictableIdleTimeMillis=300000
+mds.second.datasource.validationQuery=SELECT 1 FROM DUAL
+mds.second.datasource.testWhileIdle=true
+mds.second.datasource.testOnBorrow=false
+mds.second.datasource.testOnReturn=false
+mds.second.datasource.poolPreparedStatements=true
+mds.second.datasource.maxPoolPreparedStatementPerConnectionSize=20
+mds.second.datasource.filters=stat,wall,log4j
+mds.second.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+
