--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,1 +1,70 @@
+#开发环境配置
 server.port=80
+
+#数据库访问配置
+#mysql
+spring.datasource.url=jdbc:mysql://192.168.10.217:3306/hyj?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#oracle
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@192.168.10.217:1521:resource
+#spring.datasource.username=hyj
+#spring.datasource.password=hyj
+###################以下为druid增加的配置###########################
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+# 下面为连接池的补充设置，应用到上面所有数据源中
+# 初始化大小，最小，最大
+spring.datasource.initialSize=5
+spring.datasource.minIdle=5
+spring.datasource.maxActive=20
+# 配置获取连接等待超时的时间
+spring.datasource.maxWait=60000
+# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+# 配置一个连接在池中最小生存的时间，单位是毫秒
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+# 打开PSCache，并且指定每个连接上PSCache的大小
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+# 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+spring.datasource.filters=stat,wall,log4j
+# 通过connectProperties属性来打开mergeSql功能；慢SQL记录
+spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+# 合并多个DruidDataSource的监控数据
+#spring.datasource.useGlobalDataSourceStat=true
+#该数据源别名
+spring.datasource.name= base-datasource 
+#指定初始化数据源，是否用data.sql来初始化，默认: true
+spring.datasource.initialize= true 
+
+#######################################################################
+#多数据源配置相关  Multiple data source 第二数据源
+mds.second.datasource.url=jdbc:mysql://192.168.10.217:3306/tale?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+mds.second.datasource.username=root
+mds.second.datasource.password=root
+mds.second.datasource.driver-class-name=com.mysql.jdbc.Driver
+mds.second.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#指定初始化数据源，是否用data.sql来初始化，默认: true
+mds.second.datasource.initialize= true 
+mds.second.datasource.name= second-datasource 
+mds.second.datasource.initialSize=5
+mds.second.datasource.minIdle=5
+mds.second.datasource.maxActive=20
+mds.second.datasource.maxWait=60000
+mds.second.datasource.timeBetweenEvictionRunsMillis=60000
+mds.second.datasource.minEvictableIdleTimeMillis=300000
+mds.second.datasource.validationQuery=SELECT 1 FROM DUAL
+mds.second.datasource.testWhileIdle=true
+mds.second.datasource.testOnBorrow=false
+mds.second.datasource.testOnReturn=false
+mds.second.datasource.poolPreparedStatements=true
+mds.second.datasource.maxPoolPreparedStatementPerConnectionSize=20
+mds.second.datasource.filters=stat,wall,log4j
+mds.second.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
