--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,54 @@
-server.port=80
+#生产环境配置
+server.port=8000
+
+#mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/hyj?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@192.168.10.217:1521:resource
+#spring.datasource.username=hyj
+#spring.datasource.password=hyj
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.initialSize=5
+spring.datasource.minIdle=5
+spring.datasource.maxActive=20
+spring.datasource.maxWait=60000
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+spring.datasource.filters=stat,wall,log4j
+spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+#spring.datasource.useGlobalDataSourceStat=true
+spring.datasource.name= base-datasource 
+spring.datasource.initialize= true 
+
+#######################################################################
+#多数据源配置相关  Multiple data source 第二数据源
+mds.second.datasource.url=jdbc:mysql://localhost:3306/mysql?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+mds.second.datasource.username=root
+mds.second.datasource.password=root
+mds.second.datasource.driver-class-name=com.mysql.jdbc.Driver
+mds.second.datasource.type=com.alibaba.druid.pool.DruidDataSource
+mds.second.datasource.initialize= true 
+mds.second.datasource.name= second-datasource 
+mds.second.datasource.initialSize=5
+mds.second.datasource.minIdle=5
+mds.second.datasource.maxActive=20
+mds.second.datasource.maxWait=60000
+mds.second.datasource.timeBetweenEvictionRunsMillis=60000
+mds.second.datasource.minEvictableIdleTimeMillis=300000
+mds.second.datasource.validationQuery=SELECT 1 FROM DUAL
+mds.second.datasource.testWhileIdle=true
+mds.second.datasource.testOnBorrow=false
+mds.second.datasource.testOnReturn=false
+mds.second.datasource.poolPreparedStatements=true
+mds.second.datasource.maxPoolPreparedStatementPerConnectionSize=20
+mds.second.datasource.filters=stat,wall,log4j
+mds.second.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
