--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.profiles.active=dev
-
+spring.application.name=wdm
 #spring.freemarker.allow-request-override=false
 #spring.freemarker.cache=true
 #spring.freemarker.check-template-location=true
@@ -22,58 +22,17 @@ spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
 
-# javamail 
+# javamail  个人信息请勿泄露
 spring.mail.host=smtp.163.com
 spring.mail.username=weiniluoleiwdm@163.com
-spring.mail.password=wdm123
+spring.mail.password=*******************
 spring.mail.default-encoding=UTF-8
 #发件人地址
 mail.fromMail.addr=weiniluoleiwdm@163.com
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 
-#数据库访问配置
-#mysql
-#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/blog
-#oracle
-#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.10.217:1521:resource
-spring.datasource.username=hyj
-spring.datasource.password=hyj
-###################以下为druid增加的配置###########################
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-# 下面为连接池的补充设置，应用到上面所有数据源中
-# 初始化大小，最小，最大
-spring.datasource.initialSize=5
-spring.datasource.minIdle=5
-spring.datasource.maxActive=20
-# 配置获取连接等待超时的时间
-spring.datasource.maxWait=60000
-# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-spring.datasource.timeBetweenEvictionRunsMillis=60000
-# 配置一个连接在池中最小生存的时间，单位是毫秒
-spring.datasource.minEvictableIdleTimeMillis=300000
-spring.datasource.validationQuery=SELECT 1 FROM DUAL
-spring.datasource.testWhileIdle=true
-spring.datasource.testOnBorrow=false
-spring.datasource.testOnReturn=false
-# 打开PSCache，并且指定每个连接上PSCache的大小
-spring.datasource.poolPreparedStatements=true
-spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
-# 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-spring.datasource.filters=stat,wall,log4j
-# 通过connectProperties属性来打开mergeSql功能；慢SQL记录
-spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-# 合并多个DruidDataSource的监控数据
-#spring.datasource.useGlobalDataSourceStat=true
-#该数据源别名
-spring.datasource.name= base-datasource 
-#指定初始化数据源，是否用data.sql来初始化，默认: true
-spring.datasource.initialize= true 
 ###############以上为配置druid添加的配置########################################
 ### druid 监控
 #spring.datasource.druid.web-stat-filter.enabled=true
@@ -125,27 +84,4 @@ spring.activemq.packages.trust-all=true
 com.app.author=Wangdm
 com.app.time=2018/04/18 16:12:16
 
-#多数据源配置相关  Multiple data source
-mds.second.datasource.url=jdbc:mysql://192.168.10.217:3306/tale?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
-mds.second.datasource.username=root
-mds.second.datasource.password=root
-mds.second.datasource.driver-class-name=com.mysql.jdbc.Driver
-mds.second.datasource.type=com.alibaba.druid.pool.DruidDataSource
-#指定初始化数据源，是否用data.sql来初始化，默认: true
-mds.second.datasource.initialize= true 
-mds.second.datasource.name= second-datasource 
-mds.second.datasource.initialSize=5
-mds.second.datasource.minIdle=5
-mds.second.datasource.maxActive=20
-mds.second.datasource.maxWait=60000
-mds.second.datasource.timeBetweenEvictionRunsMillis=60000
-mds.second.datasource.minEvictableIdleTimeMillis=300000
-mds.second.datasource.validationQuery=SELECT 1 FROM DUAL
-mds.second.datasource.testWhileIdle=true
-mds.second.datasource.testOnBorrow=false
-mds.second.datasource.testOnReturn=false
-mds.second.datasource.poolPreparedStatements=true
-mds.second.datasource.maxPoolPreparedStatementPerConnectionSize=20
-mds.second.datasource.filters=stat,wall,log4j
-mds.second.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
