--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,9 +46,9 @@ spring.mail.properties.mail.smtp.starttls.required=true
 
 ##mybaits
 ##指向mapper的xml文件位置 当配置多数据源时因为所有路径都重写 该出可省略
-#mybatis.mapper-locations=classpath:com/example/demo/mapper/*Mapper.xml
-#mybatis.config-location: classpath:mybatis/Config.xml
-#mybatis.type-aliases-package=com.example.demo.mapper.dao
+mybatis.mapper-locations=classpath:com/example/demo/mapper/*Mapper.xml
+mybatis.config-location: classpath:mybatis/Config.xml
+mybatis.type-aliases-package=com.example.demo.mapper.dao
 
 ##redis配置相关
 # Redis数据库索引（默认为0）
